# Trading-Engine

./: .gitignore  README.md  TODO.md
exchanges/: nasdaq.csv  nasdaqSymbols  smallTest  taiwanIndia.txt  taiwanIndiaSymbols
scripts/: averageTime  debugLeaks  getExchangeData  run
src/: CMakeLists.txt  exchange.cpp  exchange.hpp  main.cpp  order.cpp  order.h  orderBook.cpp  orderBook.h  test  trader.cpp  trader.hpp  util.cpp  util.hpp
src/exchange/: exchange.cpp  exchange.hpp  trader.hpp
src/misc/: ExchangeFactory.cpp  exchangeFactory.hpp  util.cpp
src/orders/: order.cpp  order.hpp  orderBook.cpp  orderBook.hpp
src/server/: db.h  server.cpp  server.hpp
src/tests/: testBook.cpp
